Update WordCount.java